--- a/index.html
+++ b/index.html
@@ -1,214 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>quanghuy6698 - Contacts info</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="asset/app.ico" />
+    <head>
+        <meta charset="utf-8" />
+        <title>quanghuy6698 - Contacts info</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="icon" type="image/x-icon" href="asset/app.ico" />
 
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/index.css" />
-  </head>
-  <body>
-    <div class="container">
-      <!-- Profile image and Job -->
-      <div class="container mt-4">
-        <div class="text-center">
-          <img
-            src="./asset/images/avatar.jpg"
-            class="profile-img rounded-circle"
-          />
-        </div>
-        <div class="text-center mt-2">
-          <span class="h6 text-center text-white">Nguyễn Quang Huy</span>
-        </div>
-        <div class="text-center">
-          <span class="h4 text-center text-white">Software Developer</span>
-        </div>
-      </div>
-      <!-- Personal describe by emojies -->
-      <div class="container link-bg rounded mt-4 p-2">
-        <div class="text-center">
-          <span>🖥️💻⌨️🖱️⚽🐯🐸👍♊🎮🎨🎬🎧🍳🍆🍦🍓🍇🍎🥤♂ 🇻🇳</span>
-        </div>
-      </div>
-      <!-- Facebook -->
-      <div class="container link-bg rounded mt-2 p-2">
-        <a
-          href="https://www.facebook.com/quanghuy6698"
-          class="link text-white"
-          target="_blank"
-        >
-          <div class="text-center pb-2">
-            <img
-              src="vendor/font-awesome-icons/facebook-square-brands.svg"
-              class="icon"
-            />
-            <span>&nbsp;Facebook</span>
-          </div>
-        </a>
-        <div
-          class="text-center border-top border-dark"
-          data-toggle="collapse"
-          data-target="#collapseFacebook"
-          aria-expanded="false"
-          aria-controls="collapseFacebook"
-        >
-          <img
-            src="vendor/font-awesome-icons/link-solid.svg"
-            class="btn-show-url"
-          />
-        </div>
-      </div>
-      <div class="collapse" id="collapseFacebook">
-        <div class="text-center bg-light rounded p-1">
-          <span>https://www.facebook.com/quanghuy6698</span>
-        </div>
-      </div>
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/index.css" />
+    </head>
+    <body>
+        <div class="container">
+            <!-- Profile image and Job -->
+            <div class="container mt-4">
+                <div class="text-center">
+                    <img src="./assets/images/avatar.jpg" class="profile-img rounded-circle" />
+                </div>
+                <div class="text-center mt-2">
+                    <span class="h6 text-center text-white">Nguyễn Quang Huy</span>
+                </div>
+                <div class="text-center">
+                    <span class="h4 text-center text-white">Software Developer</span>
+                </div>
+            </div>
+            <!-- Personal describe by emojies -->
+            <div class="container link-bg rounded mt-4 p-2">
+                <div class="text-center">
+                    <span>🖥️💻⌨️🖱️⚽🐯🐸👍♊🎮🎨🎬🎧🍳🍆🍦🍓🍇🍎🥤♂ 🇻🇳</span>
+                </div>
+            </div>
+            <!-- Facebook -->
+            <div class="container link-bg rounded mt-2 p-2">
+                <a href="https://www.facebook.com/quanghuy6698" class="link text-white" target="_blank">
+                    <div class="text-center pb-2">
+                        <img src="vendor/font-awesome-icons/facebook-square-brands.svg" class="icon" />
+                        <span>&nbsp;Facebook</span>
+                    </div>
+                </a>
+                <div
+                    class="text-center border-top border-dark"
+                    data-toggle="collapse"
+                    data-target="#collapseFacebook"
+                    aria-expanded="false"
+                    aria-controls="collapseFacebook"
+                >
+                    <img src="vendor/font-awesome-icons/link-solid.svg" class="btn-show-url" />
+                </div>
+            </div>
+            <div class="collapse" id="collapseFacebook">
+                <div class="text-center bg-light rounded p-1">
+                    <span>https://www.facebook.com/quanghuy6698</span>
+                </div>
+            </div>
 
-      <!-- Google mail -->
-      <div class="container link-bg rounded mt-2 p-2">
-        <a
-          href="mailto:quanghuy6698@gmail.com?subject=Hi there"
-          class="link text-white"
-          target="_blank"
-        >
-          <div class="text-center pb-2">
-            <img
-              src="vendor/font-awesome-icons/envelope-solid.svg"
-              class="icon"
-            />
-            <span>&nbsp;GMail</span>
-          </div>
-        </a>
-        <div
-          class="text-center border-top border-dark"
-          data-toggle="collapse"
-          data-target="#collapseGMail"
-          aria-expanded="false"
-          aria-controls="collapseGMail"
-        >
-          <img
-            src="vendor/font-awesome-icons/link-solid.svg"
-            class="btn-show-url"
-          />
-        </div>
-      </div>
-      <div class="collapse" id="collapseGMail">
-        <div class="text-center bg-light rounded p-1">
-          <span>quanghuy6698@gmail.com</span>
-        </div>
-      </div>
+            <!-- Google mail -->
+            <div class="container link-bg rounded mt-2 p-2">
+                <a href="mailto:quanghuy6698@gmail.com?subject=Hi there" class="link text-white" target="_blank">
+                    <div class="text-center pb-2">
+                        <img src="vendor/font-awesome-icons/envelope-solid.svg" class="icon" />
+                        <span>&nbsp;GMail</span>
+                    </div>
+                </a>
+                <div
+                    class="text-center border-top border-dark"
+                    data-toggle="collapse"
+                    data-target="#collapseGMail"
+                    aria-expanded="false"
+                    aria-controls="collapseGMail"
+                >
+                    <img src="vendor/font-awesome-icons/link-solid.svg" class="btn-show-url" />
+                </div>
+            </div>
+            <div class="collapse" id="collapseGMail">
+                <div class="text-center bg-light rounded p-1">
+                    <span>quanghuy6698@gmail.com</span>
+                </div>
+            </div>
 
-      <!-- LinkedIn -->
-      <div class="container link-bg rounded mt-2 p-2">
-        <a
-          href="https://www.linkedin.com/in/quanghuy6698"
-          class="link text-white"
-          target="_blank"
-        >
-          <div class="text-center pb-2">
-            <img
-              src="vendor/font-awesome-icons/linkedin-brands.svg"
-              class="icon"
-            />
-            <span>&nbsp;LinkedIn</span>
-          </div>
-        </a>
-        <div
-          class="text-center border-top border-dark"
-          data-toggle="collapse"
-          data-target="#collapseLinkedIn"
-          aria-expanded="false"
-          aria-controls="collapseLinkedIn"
-        >
-          <img
-            src="vendor/font-awesome-icons/link-solid.svg"
-            class="btn-show-url"
-          />
-        </div>
-      </div>
-      <div class="collapse" id="collapseLinkedIn">
-        <div class="text-center bg-light rounded p-1">
-          <span>https://www.linkedin.com/in/quanghuy6698</span>
-        </div>
-      </div>
+            <!-- LinkedIn -->
+            <div class="container link-bg rounded mt-2 p-2">
+                <a href="https://www.linkedin.com/in/quanghuy6698" class="link text-white" target="_blank">
+                    <div class="text-center pb-2">
+                        <img src="vendor/font-awesome-icons/linkedin-brands.svg" class="icon" />
+                        <span>&nbsp;LinkedIn</span>
+                    </div>
+                </a>
+                <div
+                    class="text-center border-top border-dark"
+                    data-toggle="collapse"
+                    data-target="#collapseLinkedIn"
+                    aria-expanded="false"
+                    aria-controls="collapseLinkedIn"
+                >
+                    <img src="vendor/font-awesome-icons/link-solid.svg" class="btn-show-url" />
+                </div>
+            </div>
+            <div class="collapse" id="collapseLinkedIn">
+                <div class="text-center bg-light rounded p-1">
+                    <span>https://www.linkedin.com/in/quanghuy6698</span>
+                </div>
+            </div>
 
-      <!-- Skype -->
-      <div class="container link-bg rounded mt-2 p-2">
-        <a
-          href="skype:live:quanghuy6698?chat"
-          class="link text-white"
-          target="_blank"
-        >
-          <div class="text-center pb-2">
-            <img
-              src="vendor/font-awesome-icons/skype-brands.svg"
-              class="icon"
-            />
-            <span>&nbsp;Skype</span>
-          </div>
-        </a>
-        <div
-          class="text-center border-top border-dark"
-          data-toggle="collapse"
-          data-target="#collapseSkype"
-          aria-expanded="false"
-          aria-controls="collapseSkype"
-        >
-          <img
-            src="vendor/font-awesome-icons/link-solid.svg"
-            class="btn-show-url"
-          />
-        </div>
-      </div>
-      <div class="collapse" id="collapseSkype">
-        <div class="text-center bg-light rounded p-1">
-          <span>live:quanghuy6698</span>
-        </div>
-      </div>
+            <!-- Skype -->
+            <div class="container link-bg rounded mt-2 p-2">
+                <a href="skype:live:quanghuy6698?chat" class="link text-white" target="_blank">
+                    <div class="text-center pb-2">
+                        <img src="vendor/font-awesome-icons/skype-brands.svg" class="icon" />
+                        <span>&nbsp;Skype</span>
+                    </div>
+                </a>
+                <div
+                    class="text-center border-top border-dark"
+                    data-toggle="collapse"
+                    data-target="#collapseSkype"
+                    aria-expanded="false"
+                    aria-controls="collapseSkype"
+                >
+                    <img src="vendor/font-awesome-icons/link-solid.svg" class="btn-show-url" />
+                </div>
+            </div>
+            <div class="collapse" id="collapseSkype">
+                <div class="text-center bg-light rounded p-1">
+                    <span>live:quanghuy6698</span>
+                </div>
+            </div>
 
-      <!-- GitHub -->
-      <div class="container link-bg rounded mt-2 p-2">
-        <a
-          href="https://github.com/quanghuy6698"
-          class="link text-white"
-          target="_blank"
-        >
-          <div class="text-center pb-2">
-            <img
-              src="vendor/font-awesome-icons/github-brands.svg"
-              class="icon"
-            />
-            <span>&nbsp;GitHub</span>
-          </div>
-        </a>
-        <div
-          class="text-center border-top border-dark"
-          data-toggle="collapse"
-          data-target="#collapseGitHub"
-          aria-expanded="false"
-          aria-controls="collapseGitHub"
-        >
-          <img
-            src="vendor/font-awesome-icons/link-solid.svg"
-            class="btn-show-url"
-          />
-        </div>
-      </div>
-      <div class="collapse" id="collapseGitHub">
-        <div class="text-center bg-light rounded p-1">
-          <span>https://github.com/quanghuy6698</span>
-        </div>
-      </div>
+            <!-- GitHub -->
+            <div class="container link-bg rounded mt-2 p-2">
+                <a href="https://github.com/quanghuy6698" class="link text-white" target="_blank">
+                    <div class="text-center pb-2">
+                        <img src="vendor/font-awesome-icons/github-brands.svg" class="icon" />
+                        <span>&nbsp;GitHub</span>
+                    </div>
+                </a>
+                <div
+                    class="text-center border-top border-dark"
+                    data-toggle="collapse"
+                    data-target="#collapseGitHub"
+                    aria-expanded="false"
+                    aria-controls="collapseGitHub"
+                >
+                    <img src="vendor/font-awesome-icons/link-solid.svg" class="btn-show-url" />
+                </div>
+            </div>
+            <div class="collapse" id="collapseGitHub">
+                <div class="text-center bg-light rounded p-1">
+                    <span>https://github.com/quanghuy6698</span>
+                </div>
+            </div>
 
-      <div class="text-center mt-4 mb-4">
-        <span class="text-white">@quanghuy6698 ❤️</span>
-      </div>
-    </div>
+            <div class="text-center mt-4 mb-4">
+                <span class="text-white">@quanghuy6698 ❤️</span>
+            </div>
+        </div>
 
-    <script src="vendor/bootstrap/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
-  </body>
+        <script src="vendor/bootstrap/bootstrap.min.js"></script>
+        <script src="js/index.js"></script>
+    </body>
 </html>
