[22/8/2021] update fix icon link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>quanghuy6698 - Contacts info</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="asset/app.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/app.ico" />
 
         <script src="vendor/jquery/jquery.min.js"></script>
         <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css" />
