--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- Profile image and Job -->
             <div class="container mt-4">
                 <div class="text-center">
-                    <img src="./assets/images/avatar.jpg" class="profile-img rounded-circle" />
+                    <img src="./assets/images/avatar-2.jpg" class="profile-img rounded-circle" />
                 </div>
                 <div class="text-center mt-2">
                     <span class="h6 text-center text-white">Nguyễn Quang Huy</span>
@@ -147,6 +147,30 @@
             <div class="collapse" id="collapseGitHub">
                 <div class="text-center bg-light rounded p-1">
                     <span>https://github.com/quanghuy6698</span>
+                </div>
+            </div>
+
+            <!-- Blog -->
+            <div class="container link-bg rounded mt-2 p-2">
+                <a href="https://mossgreenman.wordpress.com/" class="link text-white" target="_blank">
+                    <div class="text-center pb-2">
+                        <img src="vendor/font-awesome-icons/wordpress.svg" class="icon" />
+                        <span>&nbsp;GitHub</span>
+                    </div>
+                </a>
+                <div
+                    class="text-center border-top border-dark"
+                    data-toggle="collapse"
+                    data-target="#collapseBlog"
+                    aria-expanded="false"
+                    aria-controls="collapseBlog"
+                >
+                    <img src="vendor/font-awesome-icons/link-solid.svg" class="btn-show-url" />
+                </div>
+            </div>
+            <div class="collapse" id="collapseBlog">
+                <div class="text-center bg-light rounded p-1">
+                    <span>https://mossgreenman.wordpress.com/</span>
                 </div>
             </div>
 
